# learning-mcp

./: .gitignore  CLEANUP_SPEC.md  CLEANUP_SPEC_V2.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_V2.md  TEST_INFRASTRUCTURE_SUMMARY.md  TEST_REORGANIZATION_CHECKLIST.md  TEST_REORGANIZATION_SUMMARY.md  docker-compose.yml  gprompt  pyproject.toml  test_github_tools.py  test_github_tools_profile.py
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml  test.yml
config/: learning.yaml
data/persons/: avi_profile.json
docker/: supervisord.conf
docs/: MCP_HTTP_TESTING.md  MCP_SEARCH_FEATURES.md  README.md
docs/architecture/: autogen-multi-agent-planner.md  cloudflare-ai-gateway.md  search-and-rag-features.md
docs/development/: github-integration.md  integrating-external-mcps.md
docs/testing/: mcpjam-guide.md
src/: job_server.py  mcp_server.py
src/learning_mcp/: app.py  autogen_agent.py  chunker.py  config.py  config_routes.py  document_loaders.py  embeddings.py  github_client.py  job_manager.py  jobs_db.py  json_loader.py  page_ranges.py  pdf_loader.py  search_routes.py  vdb.py
src/learning_mcp/agents/: autogen_planner.py
src/learning_mcp/routes/: api_agent.py  api_exec.py  api_plan.py  config_route.py  echo.py  embed_health.py  embed_sample.py  health.py  ingest.py  jobs.py  search.py  search_api.py
src/tools/: debug_search.py  test_combined_search.py  test_education_search.py  test_github_integration.py  test_json_key_context.py  test_search_education.py  test_search_http.py
src/utils/: inprocess_client.py
state/: jobs.sqlite
tests/: README.md  __init__.py  conftest.py  test_job_api.py  test_mcp_tools.py
tests/fixtures/: sample.json
tests/integration/: __init__.py  test_api_planning.py  test_api_planning_simple.py  test_mcp_client_e2e.py  test_plan_api_call.py  test_search_integration.py
tests/manual/: __init__.py  test_check_gateway_config.py  test_education_search.py  test_gateway_flow.py  test_gateway_proof.py  test_gateway_real.py  test_gateway_tokens_explained.py  test_mcp_search.py  test_search_http_simple.py  test_search_skills.py  test_technical_skills.py
tests/test_core/: test_embeddings.py  test_loaders.py  test_vdb.py
