[project]
name = "learning-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-dotenv",
  "pyyaml",              
    "httpx",   
      "pypdf",           # PDF text extraction
  "qdrant-client",   # Vector DB
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
